<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/title"
        style="@style/titles"
        android:text="@string/register_place_title_register_place"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/informative_text"
        style="@style/informative_text"
        android:layout_margin="20sp"
        android:text="@string/register_place_general_text"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_name"
                style="@style/txt_views"
                android:layout_marginTop="0sp"
                android:paddingLeft="45sp"
                android:text="@string/register_place_name"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/place_name"
                style="@style/inp_texts"
                />

            <TextView
                android:id="@+id/txt_description"
                style="@style/txt_views"
                android:paddingLeft="45sp"
                android:text="@string/register_place_description"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/place_description"
                android:layout_height="150sp"
                android:inputType="textMultiLine"
                style="@style/inp_texts"
                android:gravity="top|start"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/txt_open_hour"
                        style="@style/txt_views"
                        android:layout_marginLeft="45sp"
                        android:text="@string/register_place_open_time"
                        android:textColor="@color/white"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/place_open_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="45sp"
                        android:layout_marginRight="45sp"
                        android:background="@drawable/form_inputs_style"
                        android:inputType="time"
                        android:focusable="false"
                        android:clickable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1.5">

                    <TextView
                        android:id="@+id/txt_close_hour"
                        style="@style/txt_views"
                        android:text="@string/register_place_close_time"
                        android:textColor="@color/white"
                        tools:ignore="MissingConstraints" />

                    <EditText
                        android:id="@+id/place_close_hour"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/form_inputs_style"
                        android:layout_marginRight="45sp"
                        android:inputType="time"
                        android:focusable="false"
                        android:clickable="false"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/txt_phone"
                style="@style/txt_views"
                android:paddingLeft="45sp"
                android:text="@string/register_place_phone"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/place_phone"
                style="@style/inp_texts"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/txt_secundary_phone"
                style="@style/txt_views"
                android:paddingLeft="45sp"
                android:text="@string/register_place_secundary_phone"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/place_secundary_phone"
                style="@style/inp_texts"
                android:inputType="number"
                />

            <TextView
                android:id="@+id/txt_adress"
                style="@style/txt_views"
                android:paddingLeft="45sp"
                android:text="@string/register_place_adress"
                android:textColor="@color/white"
                tools:ignore="MissingConstraints" />

            <EditText
                android:id="@+id/place_adress"
                style="@style/inp_texts"
                />
        </LinearLayout>
    </ScrollView>

</LinearLayout>