<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/title"
        style="@style/titles"
        android:text="@string/register_place_title_choose_images"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/informative_text"
        style="@style/informative_text"
        android:layout_marginTop="12sp"
        android:text="@string/register_place_general_text_choose_images"
        android:textAlignment="center"
        android:textColor="@color/white" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/form_pager_photos"
        android:layout_width="200sp"
        android:layout_height="250sp"
        android:background="@drawable/form_register_style"
        />
    <LinearLayout
        android:id="@+id/position_layout_place"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:backgroundTint="@color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25sp"
        android:text="@string/register_place_choose_images"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>