<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral20"
    android:orientation="vertical"
    tools:context="com.example.unilocal.activities.RegisterActivity">


    <TextView
        android:id="@+id/main_title"
        style="@style/titles"
        android:paddingLeft="50dp"
        android:text="@string/register_user_title_register"
        android:textColor="@color/white"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/we_want_know_you"
        style="@style/informative_text"
        android:paddingLeft="50dp"
        android:text="@string/register_user_want_know_you"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/main_title" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/form_pager"
        android:layout_width="320dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:background="@drawable/form_register_style"
        android:elevation="30dp">


    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/position_layout"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/Next"
        style="@style/button_next"
        android:layout_gravity="end"
        android:text="@string/register_user_next" />

</LinearLayout>