<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/material_dynamic_neutral_variant20"
    android:orientation="vertical"
    tools:context="com.example.unilocal.activities.ForgotPassActivity">

    <TextView
        android:id="@+id/main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingLeft="50dp"
        android:text="@string/forgot_sorry"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/we_want_know_you"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:justificationMode="inter_word"
        android:paddingLeft="50dp"
        android:text="@string/forgot_recover_pass"
        android:textColor="@color/white"
        android:textSize="29dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/main_title"
        tools:ignore="MissingConstraints" />


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/form_pager_forgot"
        android:layout_width="320dp"
        android:layout_height="210dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:background="@drawable/form_register_style"
        android:elevation="30dp">


    </androidx.viewpager.widget.ViewPager>

    <LinearLayout
        android:id="@+id/position_layout"
        android:layout_width="35dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:orientation="horizontal" />

    <Button
        android:id="@+id/btn_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:background="@drawable/border_style"
        android:backgroundTint="@color/app_color"
        android:text="@string/forgot_btn_send"
        android:textColor="@color/material_dynamic_neutral20"
        android:textSize="16dp"
        tools:ignore="MissingConstraints" />

</LinearLayout>